# pesquisa-eleitoral

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.ps1
.github/workflows/: ci.yml
database/: README.md
database/samples/deletes/: candidate.sql  city.sql  result.sql  vote.sql
database/samples/inserts/: candidate.sql  city.sql  result.sql  vote.sql
database/samples/selects/: candidate.sql  city.sql  result.sql  vote.sql
database/samples/updates/: candidate.sql  city.sql  result.sql  vote.sql
database/schema/tables/: candidate.sql  city.sql  log.sql  result.sql  vote.sql
database/seeds/: generate.ps1  generate.sh  ibge.json  seed.sql
docs/img/: brainstorm.excalidraw
src/core/: candidate.h  candidate_repository.cpp  candidate_repository.h  city.h  city_repository.cpp  city_repository.h  database_context.h  ibge_demographic.cpp  ibge_demographic.h  irepository.h  log.h  log_repository.cpp  log_repository.h  poll_parser.cpp  poll_parser.h  result.h  result_processor.cpp  result_processor.h  result_repository.cpp  result_repository.h  vote.h  vote_intention.cpp  vote_intention.h  vote_repository.cpp  vote_repository.h
src/ui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: CMakeLists.txt  test_candidate_repository.cpp  test_city_repository.cpp  test_ibge_demographic.cpp  test_integration_ibge_database_update.cpp  test_log_repository.cpp  test_poll_parser.cpp  test_result_processor.cpp  test_result_repository.cpp  test_vote_repository.cpp
tests/resources/: poll_2candidates.txt  poll_3candidates.txt  poll_7candidates.txt  poll_good.txt  poll_malformed.txt
